# hyperion

./: .gitignore  AUDIT_REPORT.md  CITATION.cff  DISTRIBUTION_DRAFTS.md  README.md  WHAT_WE_BUILT.md  analyze_failures.py  audit_independent.py  audit_perturb.py  pyproject.toml
data/arc1d/: download_and_prep.py
data/arc_agi/: download_and_prep.py
data/cogs/: download_and_prep.py
data/pcfg/: download_and_prep.py
data/scan/: download_and_prep.py
pure_vsa/: ALPHACODE_NULL_RESULT.md  ARC2D_BASELINE.md  ARC2D_FAILURE_CLUSTERS.md  OVERNIGHT_REPORT.md  RESEARCH_CONCLUSION.md  __init__.py  arc1d_solver.py  arc2d_alphacode.py  arc2d_llm_proposer.py  arc2d_perception.py  arc2d_solver.py  arc2d_ttt.py  arc2d_vsa.py  cogs_hyperion.py  cogs_recursive.py  cogs_template_learner.py  composer.py  discovery.py  hyperion.py  llm_parser.py  memory.py  pcfg_hyperion.py  reasoner.py  scan_grammar_discovery.py  scan_hyperion.py  scan_hyperion_parserless.py  scan_runner.py  tinyscan.py
tests/: test_arc1d.py  test_arc2d.py  test_cogs.py  test_cogs_template_learner.py  test_pcfg.py  test_pure_vsa_composer.py  test_pure_vsa_discovery.py  test_pure_vsa_memory.py  test_scan_all_splits.py  test_scan_hyperion.py  test_scan_parserless.py
vsa_core/: __init__.py  cleanup.py  codebook.py  ops.py  ste.py
